--- a/project/part5/css/greenvillemiddle.css
+++ b/project/part5/css/greenvillemiddle.css
@@ -25,7 +25,7 @@
 }
 
 .feature-card:hover {
-    border-color: #4ade80;
+    border-color: #00b33c; /* Old color base #4ade80*/
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     transform: translateY(-3px);
 }
