--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -1,4 +1,5 @@
-        body { font-family: "Roboto", sans-serif; }
+        body { font-family: "Roboto", sans-serif; background-color: lightgrey; }
         .song-card { width: 250px; margin: 15px; cursor: pointer; }
         .song-cover { width: 100%; height: 250px; object-fit: cover; }
         #gallery { display: flex; flex-wrap: wrap; justify-content: center; }
+        .header {background-color: green;}
