--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -6,6 +6,26 @@
         .container2 {max-width: 1600px; width: 1600px;}
         bottomcredits footer { background-color: black; color: white;}
 
+/* GENRES CSS TEMPLATE */
+/* Genre section styling */
+.genre-row {
+    width: 100%;
+    display: block;
+    margin: 15px 0;
+}
+
+/* Genre label styling */
+.genre-label {
+    display: block;
+    text-align: left;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration: underline;
+    color: #8f8ce7; /* periwinkle purple */
+    margin-bottom: 10px;
+}
+
+
 /* Mobile / Tablet Layout Under 1000px */
 @media screen and (max-width: 1000px) {
 
