--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -116,7 +116,8 @@
     /* Ensure footer stays at the bottom */
     footer {
         position: relative;
-        width: 100%;
+        max-width: 1000px;
+        text-align: center;
         bottom: 0;
         margin-top: 20px;
     }
