--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -103,12 +103,11 @@
 
 /* Mobile / Tablet Layout Under 1000px */
 @media screen and (max-width: 1000px) {
-     body {max-width: 1000px; text-align: left;}
-     #gallery, .wrapper { max-width: 100%; }
+     body, #gallery, .wrapper { width: 999px; max-width: 100%; text-align: left;}
     /* Ensure header stays at the top */
     header {
         position: relative;
-        width: 100%;
+        width: 999px;
         top: 0;
         z-index: 10;
     }
@@ -116,7 +115,7 @@
     /* Ensure footer stays at the bottom */
     footer {
         position: relative;
-        max-width: 1000px;
+        width: 999px;
         text-align: center;
         bottom: 0;
         margin-top: 20px;
