--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -2,6 +2,7 @@
         .song-card { width: 250px; margin: 15px; cursor: pointer; }
         .song-cover { width: 100%; height: 250px; object-fit: cover; }
         #gallery { display: flex; flex-wrap: wrap; justify-content: center; }
+        footer {background-color: black; text-align:center; color: white;}
         .header {background-color: green;}
         .container2 {}
         bottomcredits footer { background-color: black; color: white;}
