--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -6,6 +6,7 @@
         .header {background-color: green;}
         .container2 {}
         bottomcredits footer { background-color: black; color: white;}
+        a {font-size: 10px; }
 
 /* SORT SPECIFIC CSS */
 /* Genre section styling */
