--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -7,6 +7,7 @@
         .container2 {}
         bottomcredits footer { background-color: black; color: white;}
         a {font-size: 10px; }
+        button { font-size: 10px; }
 
 /* SORT SPECIFIC CSS */
 /* Genre section styling */
