--- a/project/part5htmlcomplete/licensing/css/layout.css
+++ b/project/part5htmlcomplete/licensing/css/layout.css
@@ -177,7 +177,7 @@ nav.main-nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #e6e6ff;
+    background-color: #adebad;
     padding: 20px;
     border-radius: 5px;
     width: 95%;
@@ -441,16 +441,7 @@ height: 200px;
 {
 width: 200px;
 height: 200px;    
-} 
-     .middle-columns {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .mid-col img {
-        width: 90% !important;
-        margin: 10px auto;
-    }
+}    
 }
 
 /* ----------------------------- */
@@ -488,7 +479,7 @@ height: 200px;
         margin: 0 auto;
         margin-top: 5px;
         margin-bottom: 5px;
-        background-color: #e6e6ff;
+        background-color: #adebad;
     }
    
     #miami1
@@ -523,12 +514,6 @@ max-width: 200px;
 max-height: 200px;
     
 }
-.middle-columns {
-        flex-direction: row;
-}
-footer{ max-height: 50px;
-        position: relative;
-      }
 }
 /* ----------------------------- */
 /* MASTER container2     */
@@ -545,28 +530,4 @@ li
 {
     margin-left: -5px;
     text-decoration: none;    
-}
-
-/* Make the main page a vertical flex layout */
-.container2 {
-    display: flex;
-    flex-direction: column;
-}
-
-/* Push bottom sections to the bottom */
-.bottom-sections {
-    margin-top: auto;
-}
-
-/* Layout for the middle columns */
-.middle-columns {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    gap: 20px;
-}
-
-/* Each column */
-.mid-col {
-    flex: 1;
 }
