--- a/project/part5htmlcomplete/css/greenvillemiddle.css
+++ b/project/part5htmlcomplete/css/greenvillemiddle.css
@@ -2,6 +2,8 @@
 .features h2 {
     color: #0a2f1f;
     margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 /* Grid layout for feature cards */
