--- a/project/part5htmlcomplete/deployments/css/greenville.css
+++ b/project/part5htmlcomplete/deployments/css/greenville.css
@@ -1,5 +1,7 @@
 .middle-columns{ background-color: lightgrey;}
 a, li {font-size: 10pt;}
+h1 > a { font-size: 30px;}
+h1 > a { font-size: 30px;}
 h1 { margin-left: 30px;}
 h2 { margin-left: 30px;}
 h3 { 
